💥 added initial LCD files (not working at the same time)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "workbench.colorCustomizations": {
-        "titleBar.activeBackground": "#34f620"
+        "titleBar.activeBackground": "#408843"
+    },
+    "files.associations": {
+        "main.h": "c"
     }
 }
