🍱 added missing files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,26 @@
         "stdint.h": "c",
         "type_traits": "c",
         "touchscreen.h": "c",
-        "audio_user_dsp.h": "c"
+        "audio_user_dsp.h": "c",
+        "audio_speaker_node.h": "c",
+        "usb_audio.h": "c",
+        "audio_user_devices.h": "c",
+        "stm32f769i_discovery_audio_ex.h": "c",
+        "audio_sessions_usb.h": "c",
+        "usbd_desc.h": "c",
+        "usbd_def.h": "c",
+        "usbd_conf.h": "c",
+        "hal_usb_ex.h": "c",
+        "audio_node.h": "c",
+        "stm32f7xx_hal_pcd.h": "c"
     },
     "cortex-debug.registerUseNaturalFormat": false,
     "stm32-for-vscode.openOCDPath": "C:\\USERS\\MARCELO\\APPDATA\\ROAMING\\CODE\\USER\\GLOBALSTORAGE\\BMD.STM32-FOR-VSCODE\\@XPACK-DEV-TOOLS\\OPENOCD\\0.11.0-2.1\\.CONTENT\\BIN\\OPENOCD.EXE",
     "cortex-debug.armToolchainPath": "c:\\Users\\Marcelo\\AppData\\Roaming\\Code\\User\\globalStorage\\bmd.stm32-for-vscode\\@xpack-dev-tools\\arm-none-eabi-gcc\\10.3.1-2.3.1\\.content\\bin",
-    "cppbuild.isEnabled": false
+    "cppbuild.isEnabled": false,
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#3A2C02",
+        "titleBar.activeBackground": "#523D02",
+        "titleBar.activeForeground": "#FEFAEB"
+    }
 }
