--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,8 @@
         "activityBar.background": "#3A2C02",
         "titleBar.activeBackground": "#523D02",
         "titleBar.activeForeground": "#FEFAEB"
+    },
+    "files.exclude": {
+        "Debug/": true
     }
 }
