--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,6 @@
         "titleBar.inactiveBackground": "#4d130099",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#4d1300"
+    "peacock.color": "#4d1300",
+    "cmake.configureOnOpen": false
 }
